adding web api tests for uploading images.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.13.3",
     "https-proxy-agent": "^1.0.0",
     "jfs": "^0.2.6",
+    "jimp": "^0.2.27",
     "localtunnel": "^1.8.1",
     "mustache": "^2.2.1",
     "request": "^2.67.0",
